--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="touch-text col-lg-6">
+            <div class="touch-text col-lg-6 order-lg-1 order-2">
                 <div>
                     <h2 class="h-2">Miss <br> cupcake</h2>
 
@@ -57,7 +57,7 @@
     <section class="banner_wrapper">
         <div class="container-fluid">
             <div class="row">
-                <div class="text col-lg-8">
+                <div class="text col-lg-12">
                     <div>
                         <h2 class="h-2">Celebrating the <br> little things</h2>
 
@@ -68,7 +68,7 @@
                         <p class="p-1">We are committed to building a work environment where we can all learn,
                             grow and be our best selves.
                         </p>
-                        <div class="img">
+                        <div class="top">
                             <img src="./images/3.png" class="img-fluid">
 
                         </div>
