--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </p>
 
                 </div>
-                <div class="mt-5">
+                <div class="mt-5 mb-5">
                     <button type="button" class="btn">SHOP NOW</button>
                 </div>
             </div>
